--- a/styles/global.css
+++ b/styles/global.css
@@ -2,12 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #f1e1ff;
+  background-color: #f5edfc;
 }
 
 h1, h2, h3 {
   font-family: 'Poppins', sans-serif;
   font-weight: 700; /* Uso do peso 700 para títulos */
+  color: #693481;
 }
 
 p, li {
@@ -15,3 +16,6 @@ p, li {
   font-weight: 400; /* Uso do peso normal para textos */
 }
 
+section {
+  margin-bottom: 50px; /* Espaço de 50 pixels entre as seções */
+}
