--- a/styles/index.css
+++ b/styles/index.css
@@ -1,2 +1,7 @@
 @import url(global.css);
 @import url(header.css);
+@import url(about.css);
+@import url(experience.css);
+@import url(hobbies.css);
+@import url(contact.css);
+@import url(footer.css);
