corrigindo o trabalho (criando portfólio)

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,6 @@
 @import url(header.css);
 @import url(about.css);
 @import url(experience.css);
-@import url(hobbies.css);
+@import url(portfolio.css);
 @import url(contact.css);
 @import url(footer.css);
