--- a/styles/global.css
+++ b/styles/global.css
@@ -1,25 +1,25 @@
 html {
-  scroll-behavior: smooth;
+  scroll-behavior: smooth; /* Suaviza o scroll */
 }
 
 body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #f5edfc;
+  background-color: #f5edfc; /* Cor de fundo global */
 }
 
 h1, h2, h3 {
   font-family: 'Poppins', sans-serif;
-  font-weight: 700; /* Uso do peso 700 para títulos */
+  font-weight: 700; /* Peso da fonte para títulos */
   color: #693481;
 }
 
 p, li {
   font-family: 'Poppins', sans-serif;
-  font-weight: 400; /* Uso do peso normal para textos */
+  font-weight: 400; /* Peso normal para textos */
 }
 
 section {
-  margin-bottom: 50px; /* Espaço de 50 pixels entre as seções */
+  margin-bottom: 50px; /* Espaçamento entre seções */
 }
